<resources>
    <string name="app_name">GpsTracker</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time</string>
    <string name="location">Location</string>
    <string name="track_color">Track color</string>
    <string name="track_color_summary">Choose track color</string>
    <string name="location_disabled">Location disabled</string>
    <string name="location_dialog_message">Do you want enable GPS></string>
</resources>